--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-hello world
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Main Page</title>
+    <link rel="spreadsheet" href="style.css">
+</head>
+<body></body>
+</html>
