--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <head>
     <meta charset="utf-8">
     <title>Main Page</title>
-    <link rel="spreadsheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body></body>
+<body>
+    <div id="main_container">
+    </div>
+</body>
 </html>
+<!-- 
+material.io/tools/color
+Primary #fb8c00
+P — Light #ffbd45
+P — Dark #c25e00 -->
