--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-<html>
 
-<head>
-    <meta charset="utf-8">
+<!-- saved from url=(0029)https://pkafelixon.github.io/ -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <title>Main Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Main Page_files/style.css">
 </head>
 
 <body>
-    <div id=main_container>
-        <div id=sticky>
-            <a href="index.html">
-                <div id=logo></div>
+    <div id="main_container">
+        <div id="sticky">
+            <a href="https://pkafelixon.github.io/index.html">
+                <div id="logo"></div>
             </a>
-            <div id=nav><a href="#">Empty</a></div>
-            <div id=nav><a href="#">Empty</a></div>
-            <div id=nav><a href="#">Empty</a></div>
-            <div id=nav><a href="#">Empty</a></div>
+            <div id="nav"><a href="https://pkafelixon.github.io/#">Empty</a></div>
+            <div id="nav"><a href="https://pkafelixon.github.io/#">Empty</a></div>
+            <div id="nav"><a href="https://pkafelixon.github.io/#">Empty</a></div>
+            <div id="nav"><a href="https://pkafelixon.github.io/#">Empty</a></div>
         </div>
-        <div id=container>
+        <div id="container">
             <div id="text">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisi at purus pharetra convallis. Aenean rutrum
@@ -144,11 +144,11 @@
             </div>
         </div>
     </div>
-</body>
 
-</html>
+
+
 <!-- 
 material.io/tools/color
 Primary #fb8c00
 P — Light #ffbd45
-P — Dark #c25e00 -->
+P — Dark #c25e00 --></body></html>
