--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Main Page</title>
-    <link rel="stylesheet" href="./Main Page_files/style.css">
+    <link rel="stylesheet" href="./index_files/style.css">
 </head>
 
 <body>
