--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <a href="https://pkafelixon.github.io/index.html">
                 <div id="logo"></div>
             </a>
-            <div id="nav"><a href="https://pkafelixon.github.io/#">Empty</a></div>
-            <div id="nav"><a href="https://pkafelixon.github.io/#">Empty</a></div>
-            <div id="nav"><a href="https://pkafelixon.github.io/#">Empty</a></div>
-            <div id="nav"><a href="https://pkafelixon.github.io/#">Empty</a></div>
+            <a href="https://pkafelixon.github.io/#"><div id="nav">Empty</div></a>
+            <a href="https://pkafelixon.github.io/#"><div id="nav">Empty</div></a>
+            <a href="https://pkafelixon.github.io/#"><div id="nav">Empty</div></a>
+            <a href="https://pkafelixon.github.io/#"><div id="nav">Empty</div></a>
         </div>
         <div id="container">
             <div id="text">
