--- a/ttt_v0.10.html
+++ b/ttt_v0.10.html
@@ -25,8 +25,7 @@
         <div id="nav">Empty</div>
       </a>
     </div>
-    <div id="container">
-      <div id="general">
+    <div style="padding: 50px 0 0 40%;">
         <div class=kafle id="textbox">Tura X</div>
         <div class=kafle id="d1" onclick="komunikat1(this.id)"></div>
         <div class=kafle id="d2" onclick="komunikat1(this.id)"></div>
