--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="nav">Empty</div>
             </a>
         </div>
-        <div id="container">
+        <div id="container__mainpage">
             <div id="text">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisi at purus pharetra convallis.
