--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div id="main_container">
-        <div id="sticky">
+        <header id="sticky">
+            <nav>
             <a href="https://pkafelixon.github.io/index.html">
                 <div id="logo"></div>
             </a>
@@ -26,8 +26,9 @@
             <a href="https://pkafelixon.github.io/#">
                 <div id="nav">Empty</div>
             </a>
-        </div>
-        <div id="container__mainpage">
+        </nav>
+    </header>
+        <article id="container__mainpage">
             <div id="text">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisi at purus pharetra convallis.
@@ -229,8 +230,7 @@
                     lectus metus, et pellentesque ante rhoncus consequat.
                 </p>
             </div>
-        </div>
-    </div>
+        </article>>
 
 
 
