--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="https://pkafelixon.github.io/index.html">
                 <div id="logo"></div>
             </a>
-            <a href="https://pkafelixon.github.io/ttt_v0.10.html">
+            <a href="https://pkafelixon.github.io/index_files/ttt_v0.10.html">
                 <div id="nav">XO</div>
             </a>
             <a href="https://pkafelixon.github.io/#">
