--- a/index_files/ttt_v0.10.html
+++ b/index_files/ttt_v0.10.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Main Page</title>
-  <link rel="stylesheet" href="./index_files/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body style="background-color: #fff; font-family: 'Roboto', sans-serif;">
