--- a/index.html
+++ b/index.html
@@ -12,23 +12,26 @@
         <header id="sticky">
             <nav>
             <a href="https://pkafelixon.github.io/index.html">
-                <div id="logo"></div>
+                <div id="f_left">Kafelixon</div>
             </a>
             <a href="https://pkafelixon.github.io/index_files/ttt_v0.10.html">
-                <div id="nav">XO</div>
+                <div id="f_right">XO</div>
             </a>
             <a href="https://pkafelixon.github.io/#">
-                <div id="nav">Empty</div>
+                <div id="f_right">Empty</div>
             </a>
             <a href="https://pkafelixon.github.io/#">
-                <div id="nav">Empty</div>
+                <div id="f_right">Empty</div>
             </a>
             <a href="https://pkafelixon.github.io/#">
-                <div id="nav">Empty</div>
+                <div id="f_right">Empty</div>
             </a>
         </nav>
     </header>
         <article id="container__mainpage">
+            <header>
+                <h1>Sample Header</h1>
+            </header>
             <div id="text">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisi at purus pharetra convallis.
