--- a/index_files/ttt_v0.10.html
+++ b/index_files/ttt_v0.10.html
@@ -6,25 +6,26 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 
-<body style="background-color: #fff; font-family: 'Roboto', sans-serif;">
-  <div id="main_container">
-    <div id="sticky">
+<body>
+  <header id="sticky">
+    <nav>
       <a href="https://pkafelixon.github.io/index.html">
-        <div id="logo"></div>
+        <div id="f_left">Kafelixon</div>
       </a>
-      <a href="https://pkafelixon.github.io/ttt_v0.10.html">
-        <div id="nav">XO</div>
-      </a>
-      <a href="https://pkafelixon.github.io/#">
-        <div id="nav">Empty</div>
+      <a href="https://pkafelixon.github.io/index_files/ttt_v0.10.html">
+        <div id="f_right">XO</div>
       </a>
       <a href="https://pkafelixon.github.io/#">
-        <div id="nav">Empty</div>
+        <div id="f_right">Empty</div>
       </a>
       <a href="https://pkafelixon.github.io/#">
-        <div id="nav">Empty</div>
+        <div id="f_right">Empty</div>
       </a>
-    </div>
+      <a href="https://pkafelixon.github.io/#">
+        <div id="f_right">Empty</div>
+      </a>
+    </nav>
+  </header>
     <div style="padding: 50px 0 0 30%;">
       <div class=kafle id="textbox">Tura X</div>
       <div class=kafle id="d1" onclick="komunikat1(this.id)"></div>
@@ -42,105 +43,103 @@
       <!-- <div class=kafle id="motyw" onclick="motyw()">
       Motyw
     </div> -->
-    </div>
+  <script>
+    general_color = "#efebe9"
+    color_x = "#64ffda"
+    color_o = "#64ffda"
+    win_color = "#ff8064"
 
-    <script>
-      general_color = "#efebe9"
-      color_x = "#64ffda"
-      color_o = "#64ffda"
-      win_color = "#ff8064"
+    tab = [0, 0, 0, 0, 0, 0, 0, 0, 0];
+    var koniec_gry = 0;
+    var tura = 0;
+    var tb = document.getElementById("textbox");
 
-      tab = [0, 0, 0, 0, 0, 0, 0, 0, 0];
-      var koniec_gry = 0;
-      var tura = 0;
-      var tb = document.getElementById("textbox");
-
-      function komunikat1(id) {
-        var divid = document.getElementById(id);
-        if (id == "restart") {
-          tura = 0;
-          koniec_gry = 0;
-          tab = [0, 0, 0, 0, 0, 0, 0, 0, 0];
-          for (i = 9; i > 0; i--) {
-            document.getElementById("d" + i).innerHTML = "";
-            document.getElementById("d" + i).style.backgroundColor = general_color;
-          }
-          tb.innerHTML = '<button id=button onclick="nowa_gra(0)">X</button><button id=button2 onclick=nowa_gra(1)>O</button>'
+    function komunikat1(id) {
+      var divid = document.getElementById(id);
+      if (id == "restart") {
+        tura = 0;
+        koniec_gry = 0;
+        tab = [0, 0, 0, 0, 0, 0, 0, 0, 0];
+        for (i = 9; i > 0; i--) {
+          document.getElementById("d" + i).innerHTML = "";
+          document.getElementById("d" + i).style.backgroundColor = general_color;
         }
-        if (koniec_gry == 0) {
-          if (tab[id[1] - 1] == 0) {
-            if (tura == 1) {
-              tab[id[1] - 1] = 1
-              tb.innerHTML = 'Tura X'
-              divid.innerHTML = '<img src="O.png" style="width:120px;height:120px;">';
-              tura = 0;
-            }
-            else if (tura == 0) {
-              tab[id[1] - 1] = 2
-              tb.innerHTML = 'Tura O'
-              divid.innerHTML = '<img src="X.png" style="width:120px;height:120px;">';
-              tura = 1;
-            }
+        tb.innerHTML = '<button id=button onclick="nowa_gra(0)">X</button><button id=button2 onclick=nowa_gra(1)>O</button>'
+      }
+      if (koniec_gry == 0) {
+        if (tab[id[1] - 1] == 0) {
+          if (tura == 1) {
+            tab[id[1] - 1] = 1
+            tb.innerHTML = 'Tura X'
+            divid.innerHTML = '<img src="O.png" style="width:120px;height:120px;">';
+            tura = 0;
+          }
+          else if (tura == 0) {
+            tab[id[1] - 1] = 2
+            tb.innerHTML = 'Tura O'
+            divid.innerHTML = '<img src="X.png" style="width:120px;height:120px;">';
+            tura = 1;
           }
         }
-        if (tab[0] == tab[3] && tab[3] == tab[6] && tab[6] != 0) { wygrana(1, 4, 7) }
-        else if (tab[1] == tab[4] && tab[4] == tab[7] && tab[7] != 0) { wygrana(2, 5, 8) }
-        else if (tab[2] == tab[5] && tab[5] == tab[8] && tab[8] != 0) { wygrana(3, 6, 9) }
-        else if (tab[0] == tab[1] && tab[1] == tab[2] && tab[2] != 0) { wygrana(1, 2, 3) }
-        else if (tab[3] == tab[4] && tab[4] == tab[5] && tab[5] != 0) { wygrana(4, 5, 6) }
-        else if (tab[6] == tab[7] && tab[7] == tab[8] && tab[8] != 0) { wygrana(7, 8, 9) }
-        else if (tab[2] == tab[4] && tab[4] == tab[6] && tab[6] != 0) { wygrana(3, 5, 7) }
-        else if (tab[0] == tab[4] && tab[4] == tab[8] && tab[8] != 0) { wygrana(1, 5, 9) }
-        else if (tab[0] != 0 && [1] != 0 && tab[2] != 0 && tab[3] != 0 && tab[4] != 0 && tab[5] != 0 && tab[6] != 0 && tab[7] != 0 && tab[8] != 0 && tab[9] != 0 && tab[10] != 0 && tab[11] != 0 && tab[12] != 0 && tab[13] != 0 && tab[14] != 0 && tab[15] != 0) { remis() }
-        console.log(tab)
       }
-      function wygrana(x, y, z) {
-        koniec_gry = 1;
-        document.getElementById("d" + x).style.backgroundColor = win_color;
-        document.getElementById("d" + y).style.backgroundColor = win_color;
-        document.getElementById("d" + z).style.backgroundColor = win_color;
-        if (tab[x - 1] == 1) { tb.innerHTML = 'O Wygrywa' }
-        else if (tab[x - 1] == 2) { tb.innerHTML = 'X Wygrywa' }
+      if (tab[0] == tab[3] && tab[3] == tab[6] && tab[6] != 0) { wygrana(1, 4, 7) }
+      else if (tab[1] == tab[4] && tab[4] == tab[7] && tab[7] != 0) { wygrana(2, 5, 8) }
+      else if (tab[2] == tab[5] && tab[5] == tab[8] && tab[8] != 0) { wygrana(3, 6, 9) }
+      else if (tab[0] == tab[1] && tab[1] == tab[2] && tab[2] != 0) { wygrana(1, 2, 3) }
+      else if (tab[3] == tab[4] && tab[4] == tab[5] && tab[5] != 0) { wygrana(4, 5, 6) }
+      else if (tab[6] == tab[7] && tab[7] == tab[8] && tab[8] != 0) { wygrana(7, 8, 9) }
+      else if (tab[2] == tab[4] && tab[4] == tab[6] && tab[6] != 0) { wygrana(3, 5, 7) }
+      else if (tab[0] == tab[4] && tab[4] == tab[8] && tab[8] != 0) { wygrana(1, 5, 9) }
+      else if (tab[0] != 0 && [1] != 0 && tab[2] != 0 && tab[3] != 0 && tab[4] != 0 && tab[5] != 0 && tab[6] != 0 && tab[7] != 0 && tab[8] != 0 && tab[9] != 0 && tab[10] != 0 && tab[11] != 0 && tab[12] != 0 && tab[13] != 0 && tab[14] != 0 && tab[15] != 0) { remis() }
+      console.log(tab)
+    }
+    function wygrana(x, y, z) {
+      koniec_gry = 1;
+      document.getElementById("d" + x).style.backgroundColor = win_color;
+      document.getElementById("d" + y).style.backgroundColor = win_color;
+      document.getElementById("d" + z).style.backgroundColor = win_color;
+      if (tab[x - 1] == 1) { tb.innerHTML = 'O Wygrywa' }
+      else if (tab[x - 1] == 2) { tb.innerHTML = 'X Wygrywa' }
 
+    }
+    function remis() {
+      tb.innerHTML = 'Remis'
+    }
+    function nowa_gra(tura) {
+      this.tura = tura
+      if (tura == 0) { tb.innerHTML = 'Tura X' }
+      else { tb.innerHTML = 'Tura O' }
+    }
+    // function motyw() {
+    //   general_color = "#0011ff"
+    //   color_x = "#42f442"
+    //   color_o = "#11f1ff"
+    //   win_color = "#ffffff"
+    //   for (i = 9; i > 0; i--) {
+    //     switch (tab[i - 1]) {
+    //       case 0:
+    //         document.getElementById("d" + i).style.backgroundColor = general_color;
+    //         break;
+    //       case 1:
+    //         document.getElementById("d" + i).style.backgroundColor = color_o;
+    //         break;
+    //       case 2:
+    //         document.getElementById("d" + i).style.backgroundColor = color_x;
+    //         break;
+    //     }
+    //   }
+    // }
+    function czy_wygrana(a, b, c) {
+      console.log(a, b, c)
+      var suma = tab[a - 1] + tab[b - 1] + tab[c - 1]
+      if (suma == 3 || suma == 6) {
+        return wygrana(a, b, c);
       }
-      function remis() {
-        tb.innerHTML = 'Remis'
+      else {
+        return false;
       }
-      function nowa_gra(tura) {
-        this.tura = tura
-        if (tura == 0) { tb.innerHTML = 'Tura X' }
-        else { tb.innerHTML = 'Tura O' }
-      }
-      // function motyw() {
-      //   general_color = "#0011ff"
-      //   color_x = "#42f442"
-      //   color_o = "#11f1ff"
-      //   win_color = "#ffffff"
-      //   for (i = 9; i > 0; i--) {
-      //     switch (tab[i - 1]) {
-      //       case 0:
-      //         document.getElementById("d" + i).style.backgroundColor = general_color;
-      //         break;
-      //       case 1:
-      //         document.getElementById("d" + i).style.backgroundColor = color_o;
-      //         break;
-      //       case 2:
-      //         document.getElementById("d" + i).style.backgroundColor = color_x;
-      //         break;
-      //     }
-      //   }
-      // }
-      function czy_wygrana(a, b, c) {
-        console.log(a, b, c)
-        var suma = tab[a - 1] + tab[b - 1] + tab[c - 1]
-        if (suma == 3 || suma == 6) {
-          return wygrana(a, b, c);
-        }
-        else {
-          return false;
-        }
-      }
-    </script>
+    }
+  </script>
 </body>
 
 </html>
