--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
                     lectus metus, et pellentesque ante rhoncus consequat.
                 </p>
             </div>
-        </article>>
-
-
-
+        </article>
+        <footer>
+            
+        </footer>
     <!-- 
 material.io/tools/color
 Primary #fb8c00
