--- a/index_files/ttt_v0.10.html
+++ b/index_files/ttt_v0.10.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <header id="sticky">
+  <header id="sticky" class="light_theme">
     <nav>
       <a href="https://pkafelixon.github.io/index.html">
         <div id="f_left">Kafelixon</div>
