--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 
     <title>Main Page</title>
     <link rel="stylesheet" href="./index_files/style.css">
+    <script type="text/javascript" src="./index_files/main.js"></script>
 </head>
 
 <body>
-        <header id="sticky">
+        <header id="sticky" class="light_theme">
             <nav>
             <a href="https://pkafelixon.github.io/index.html">
                 <div id="f_left">Kafelixon</div>
@@ -20,15 +21,15 @@
             <a href="https://pkafelixon.github.io/#">
                 <div id="f_right">Empty</div>
             </a>
-            <a href="https://pkafelixon.github.io/#">
-                <div id="f_right">Empty</div>
-            </a>
+            <!-- <a href="https://pkafelixon.github.io/#"> -->
+                <div id="f_right" onclick="dark_theme()">Empty</div>
+            <!-- </a> -->
             <a href="https://pkafelixon.github.io/#">
                 <div id="f_right">Empty</div>
             </a>
         </nav>
     </header>
-        <article id="container__mainpage">
+        <article id="main_container" class="light_theme">
             <header>
                 <h1>Sample Header</h1>
             </header>
@@ -234,9 +235,6 @@
                 </p>
             </div>
         </article>
-        <footer>
-            
-        </footer>
     <!-- 
 material.io/tools/color
 Primary #fb8c00
