--- a/index_files/ttt_v0.10.html
+++ b/index_files/ttt_v0.10.html
@@ -7,25 +7,25 @@
 </head>
 
 <body>
-  <header id="sticky" class="light_theme">
-    <nav>
-      <a href="https://pkafelixon.github.io/index.html">
-        <div id="f_left">Kafelixon</div>
-      </a>
-      <a href="https://pkafelixon.github.io/index_files/ttt_v0.10.html">
-        <div id="f_right">XO</div>
-      </a>
-      <a href="https://pkafelixon.github.io/#">
-        <div id="f_right">Empty</div>
-      </a>
-      <a href="https://pkafelixon.github.io/#">
-        <div id="f_right">Empty</div>
-      </a>
-      <a href="https://pkafelixon.github.io/#">
-        <div id="f_right">Empty</div>
-      </a>
-    </nav>
-  </header>
+        <header id="sticky" class="light_theme">
+          <nav>
+            <a href="https://pkafelixon.github.io/index.html">
+              <div id="f_left">Kafelixon</div>
+            </a>
+            <a href="https://pkafelixon.github.io/index_files/ttt_v0.10.html">
+              <div id="f_right">XO</div>
+            </a>
+            <a href="https://pkafelixon.github.io/#">
+              <div id="f_right">Empty</div>
+            </a>
+            <!-- <a href="https://pkafelixon.github.io/#"> -->
+            <div id="f_right" onclick="dark_theme()">Empty</div>
+            <!-- </a> -->
+            <a href="https://pkafelixon.github.io/#">
+              <div id="f_right">Empty</div>
+            </a>
+          </nav>
+        </header>
     <div style="padding: 50px 0 0 30%;">
       <div class=kafle id="textbox">Tura X</div>
       <div class=kafle id="d1" onclick="komunikat1(this.id)"></div>
