--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://pkafelixon.github.io/index_files/ttt_v0.10.html">
                 <div id="f_right">XO</div>
             </a>
-            <a href="https://pkafelixon.github.io/#">
+            <a href="https://pkafelixon.github.io/index_files/pusty.html">
                 <div id="f_right">Empty</div>
             </a>
             <!-- <a href="https://pkafelixon.github.io/#"> -->
