--- a/ttt_v0.10.html
+++ b/ttt_v0.10.html
@@ -1,11 +1,25 @@
-<?php include $_SERVER['DOCUMENT_ROOT'].'/head.php'; ?>
-<html>
+<!doctype html>
+<html lang="pl">
 
 <head>
-    <title>Kolko i krzyzyk</title>
+    <title>Kolko i Krzyzyk</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./index_files/style_light.css">
+    <script type="text/javascript" src="./index_files/theme.js"></script>
 </head>
 
 <body>
+    <div id="color_changer" onclick="Theme()">
+    </div>
+    <header id="sticky" class="theme">
+        <nav style="height:40px; ">
+            <a id="f_left" href="./index.php">Kafelixon</a>
+            <a href="./ttt_v0.10.php" id="f_right">XO</a>
+            <a href="./pusty.php" id="f_right">Test</a>
+            <!-- <a href="./pusty.php" id="f_right">Empty</a>
+            <a href="https://pkafelixon.github.io/#" id="f_right">Empty</a> -->
+        </nav>
+    </header>
     <div id=ttt>
         <div class=kafle id="textbox">Tura X</div>
         <div class=kafle id="restart" onclick="restart()">RESET
