--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
-<?php include $_SERVER['DOCUMENT_ROOT'].'/head.php'; ?>
-<html>
-<head><title>Main Page</title></head>
+<!doctype html>
+<html lang="pl">
+
+<head>
+    <title>Main Page</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./index_files/style_light.css">
+    <script type="text/javascript" src="./index_files/theme.js"></script>
+</head>
 
 <body>
+    <div id="color_changer" onclick="Theme()">
+    </div>
+    <header id="sticky" class="theme">
+        <nav style="height:40px; ">
+            <a id="f_left" href="./index.php">Kafelixon</a>
+            <a href="./ttt_v0.10.php" id="f_right">XO</a>
+            <a href="./pusty.php" id="f_right">Test</a>
+            <!-- <a href="./pusty.php" id="f_right">Empty</a>
+            <a href="https://pkafelixon.github.io/#" id="f_right">Empty</a> -->
+        </nav>
+    </header>
     <article id="main_container" class="theme">
         <header>
             <h1>Sample Header</h1>
