--- a/pusty.html
+++ b/pusty.html
@@ -13,35 +13,35 @@
     </div>
     <header id="sticky" class="theme">
         <nav style="height:40px; ">
-            <a id="f_left" href="./index.php">Kafelixon</a>
-            <a href="./ttt_v0.10.php" id="f_right">XO</a>
-            <a href="./pusty.php" id="f_right">Test</a>
+            <a id="f_left" href="./index.html">Kafelixon</a>
+            <a href="./ttt_v0.10.html" id="f_right">XO</a>
+            <a href="./pusty.html" id="f_right">Test</a>
             <!-- <a href="./pusty.php" id="f_right">Empty</a>
             <a href="https://pkafelixon.github.io/#" id="f_right">Empty</a> -->
         </nav>
     </header>
     <div id="container" style="padding:70px;">
         <script>
-        var width = (parent.innerWidth / 10);
-        var height = (parent.innerHeight / 10);
-        var sum = height * width;
-        console.log(height);
-        console.log(width);
-        console.log(sum);
-        for (var i = 0; i < sum; i++) {
-            var div = document.createElement("div");
-            div.className = "pixele";
-            div.id = "p" + i;
-            div.setAttribute("onmouseenter", "kolor(this.id)")
-            document.getElementById("container").appendChild(div);
-        }
+            var width = (parent.innerWidth / 10);
+            var height = (parent.innerHeight / 10);
+            var sum = height * width;
+            console.log(height);
+            console.log(width);
+            console.log(sum);
+            for (var i = 0; i < sum; i++) {
+                var div = document.createElement("div");
+                div.className = "pixele";
+                div.id = "p" + i;
+                div.setAttribute("onmouseenter", "kolor(this.id)")
+                document.getElementById("container").appendChild(div);
+            }
 
-        function kolor(id) {
-            document.getElementById(id).style.backgroundColor = "#ff0bdf";
-        }
-        for (var i = width - 16; i < sum; i += width - 16) {
-            document.getElementById("p" + i).style.clear = "both";
-        }
+            function kolor(id) {
+                document.getElementById(id).style.backgroundColor = "#ff0bdf";
+            }
+            for (var i = width - 16; i < sum; i += width - 16) {
+                document.getElementById("p" + i).style.clear = "both";
+            }
         </script>
     </div>
 </body>
