--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </div>
     <header id="sticky" class="theme">
         <nav style="height:40px; ">
-            <a id="f_left" href="./index.php">Kafelixon</a>
-            <a href="./ttt_v0.10.php" id="f_right">XO</a>
-            <a href="./pusty.php" id="f_right">Test</a>
+            <a id="f_left" href="./index.html">Kafelixon</a>
+            <a href="./ttt_v0.10.html" id="f_right">XO</a>
+            <a href="./pusty.html" id="f_right">Test</a>
             <!-- <a href="./pusty.php" id="f_right">Empty</a>
             <a href="https://pkafelixon.github.io/#" id="f_right">Empty</a> -->
         </nav>
