--- a/ttt_v0.10.html
+++ b/ttt_v0.10.html
@@ -57,12 +57,12 @@
                     if (tura == 1) {
                         tab[id[1] - 1] = 1
                         tb.innerHTML = 'Tura X'
-                        divid.innerHTML = '<img src="./index_files/O.png" style="width:120px;height:120px;">';
+                        divid.innerHTML = '<img src="./index_files/O.png" id="pole">';
                         tura = 0;
                     } else {
                         tab[id[1] - 1] = 2
                         tb.innerHTML = 'Tura O'
-                        divid.innerHTML = '<img src="./index_files/X.png" style="width:120px;height:120px;">';
+                        divid.innerHTML = '<img src="./index_files/X.png" id="pole">';
                         tura = 1;
                     }
                 }
