--- a/pusty.html
+++ b/pusty.html
@@ -23,24 +23,22 @@
     <div id="container" style="padding:70px;">
         <script>
             var width = (parent.innerWidth / 10);
-            var height = (parent.innerHeight / 10);
-            var sum = height * width;
-            console.log(height);
-            console.log(width);
-            console.log(sum);
+            var sum = (parent.innerHeight / 10) * width;
+
             for (var i = 0; i < sum; i++) {
                 var div = document.createElement("div");
                 div.className = "pixele";
                 div.id = "p" + i;
                 div.setAttribute("onmouseenter", "kolor(this.id)")
-                document.getElementById("container").appendChild(div);
+               document.getElementById("container").appendChild(div);
             }
 
             function kolor(id) {
-                document.getElementById(id).style.backgroundColor = "#ff0bdf";
+                var losowy = "rgb(" + Math.floor(Math.random() * 255) + ", " + Math.floor(Math.random() * 255) + ", " +Math.floor(Math.random() * 255) + ")";
+               document.getElementById(id).style.backgroundColor = losowy;
             }
             for (var i = width - 16; i < sum; i += width - 16) {
-                document.getElementById("p" + i).style.clear = "both";
+               document.getElementById("p" + i).style.clear = "both";
             }
         </script>
     </div>
