--- a/gravity.html
+++ b/gravity.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script src="canvas_js.1.js" charset="utf-8"></script>
+    <script src="gravity.js" charset="utf-8"></script>
   </body>
 </html>
