--- a/sub/interaktywny_js/interaktywny_js.html
+++ b/sub/interaktywny_js/interaktywny_js.html
@@ -3,8 +3,7 @@
   <head>
     <style media="screen">
       canvas{
-        z-index: -1;
-        position: absolute;
+        border: 1px solid black;
       }
       body{
         margin:0;
@@ -15,7 +14,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <div id=container style="margin-left:30%;position:absolute;width:50%;z-index:1;height: 100%;background-color: grey;"></div>
-    <script src="canvas_js (kopia).js" charset="utf-8"></script>
+<script src="interaktywny_js.js" charset="utf-8"></script>
   </body>
 </html>
