--- a/sub/zmywanie/zmywanie.html
+++ b/sub/zmywanie/zmywanie.html
@@ -16,6 +16,6 @@
   <body>
     <img src="paprotka.jpg" style="z-index:-1;position:absolute;width: 312px;height: 416px;">
     <canvas></canvas>
-    <script src="canvas_js - Kopia.js" charset="utf-8"></script>
+    <script src="zmywanie.js" charset="utf-8"></script>
   </body>
 </html>
