--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav style="height:40px; ">
             <a id="f_left" href="./index.html">Kafelixon</a>
             <a href="./ttt_v0.10.html" id="f_right">XO</a>
-            <a href="./pusty.html" id="f_right">Test</a>
+<a href="pkafelixon.github.io\sub\grawitacja\gravity.html" id="f_right">Grawitacja</a>
         </nav>
     </header>
     <article id="main_container" class="theme">
