--- a/sub/kolko i krzyzyk/kolko_i_krzyzyk.html
+++ b/sub/kolko i krzyzyk/kolko_i_krzyzyk.html
@@ -4,8 +4,8 @@
 <head>
     <title>Kolko i Krzyzyk</title>
     <meta charset="utf-8">
-<link rel="stylesheet" href="pkafelixon.github.io/index_files/style_light.css">
-    <script type="text/javascript" src="./index_files/theme.js"></script>
+    <link rel="stylesheet" href="pkafelixon.github.io\index_files\style_light.css">
+    <script type="text/javascript" src="pkafelixon.github.io\index_files\theme.js"></script>
 </head>
 
 <body>
@@ -13,10 +13,7 @@
     </div>
     <header id="sticky" class="theme">
         <nav style="height:40px; ">
-            <a id="f_left" href="./index.html">Kafelixon</a>
-            <a href="./ttt_v0.10.html" id="f_right">XO</a>
-            <!-- <a href="./pusty.php" id="f_right">Empty</a>
-            <a href="https://pkafelixon.github.io/#" id="f_right">Empty</a> -->
+            <a id="f_left" href="pkafelixon.github.io\index.html">Kafelixon</a>
         </nav>
     </header>
     <div id=ttt>
@@ -56,12 +53,12 @@
                     if (tura == 1) {
                         tab[id[1] - 1] = 1
                         tb.innerHTML = 'Tura X'
-                        divid.innerHTML = '<img src="./index_files/O.png" id="pole">';
+                        divid.innerHTML = '<img src="pkafelixon.github.io\index_files\O.png" id="pole">';
                         tura = 0;
                     } else {
                         tab[id[1] - 1] = 2
                         tb.innerHTML = 'Tura O'
-                        divid.innerHTML = '<img src="./index_files/X.png" id="pole">';
+                        divid.innerHTML = '<img src="pkafelixon.github.io\index_files\X.png" id="pole">';
                         tura = 1;
                     }
                 }
