--- a/sub/kolko i krzyzyk/kolko_i_krzyzyk.html
+++ b/sub/kolko i krzyzyk/kolko_i_krzyzyk.html
@@ -4,16 +4,16 @@
 <head>
     <title>Kolko i Krzyzyk</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="pkafelixon.github.io\index_files\style_light.css">
-    <script type="text/javascript" src="pkafelixon.github.io\index_files\theme.js"></script>
+    <link rel="stylesheet" href="../../index_files\style_light.css">
+    <script type="text/javascript" src="../../index_files\theme.js"></script>
 </head>
 
 <body>
-    <div id="color_changer" onclick="Theme()">
+    <!-- <div id="color_changer" onclick="Theme()"> -->
     </div>
     <header id="sticky" class="theme">
         <nav style="height:40px; ">
-            <a id="f_left" href="pkafelixon.github.io\index.html">Kafelixon</a>
+            <a id="f_left" href="../../index.html">Kafelixon</a>
         </nav>
     </header>
     <div id=ttt>
@@ -53,12 +53,12 @@
                     if (tura == 1) {
                         tab[id[1] - 1] = 1
                         tb.innerHTML = 'Tura X'
-                        divid.innerHTML = '<img src="pkafelixon.github.io\index_files\O.png" id="pole">';
+                        divid.innerHTML = '<img src="../../index_files/O.png" id="pole">';
                         tura = 0;
                     } else {
                         tab[id[1] - 1] = 2
                         tb.innerHTML = 'Tura O'
-                        divid.innerHTML = '<img src="pkafelixon.github.io\index_files\X.png" id="pole">';
+                        divid.innerHTML = '<img src="../../index_files/X.png" id="pole">';
                         tura = 1;
                     }
                 }
