--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>Main Page</title>
     <meta charset="utf-8">
-<link rel="stylesheet" href="pkafelixon.github.io\index_files\style_dark.css">
-<script type="text/javascript" src="pkafelixon.github.io\index_files\style_light.css"></script>
+<link rel="stylesheet" href="index_files\style_light.css">
+<script type="text/javascript" src="index_files\theme.js"></script>
 </head>
 
 <body>
@@ -13,12 +13,12 @@
     </div>
     <header id="sticky" class="theme">
         <nav style="height:40px; ">
-            <a id="f_left" href="pkafelixon.github.io\index.html">Kafelixon</a>
+            <a id="f_left" href="index.html">Kafelixon</a>
             <div id="f_right">
-                <a href="pkafelixon.github.io\sub\kolko i krzyzyk\kolko_i_krzyzyk.html">XO</a>
-                <a href="pkafelixon.github.io\sub\interaktywny_js\interaktywny_js.html">JS</a>
-                <a href="pkafelixon.github.io\sub\grawitacja\gravity.html">Grawitacja</a>
-                <a href="pkafelixon.github.io\sub\zmywanie\zmywanie.html">Zmywanie</a>
+                <a href="sub\kolko i krzyzyk\kolko_i_krzyzyk.html">XO</a>
+                <a href="sub\interaktywny_js\interaktywny_js.html">JS</a>
+                <a href="sub\grawitacja\gravity.html">Grawitacja</a>
+                <a href="sub\zmywanie\zmywanie.html">Zmywanie</a>
             </div>
         </nav>
     </header>
