--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>Main Page</title>
     <meta charset="utf-8">
-<link rel="stylesheet" href="index_files\style_light.css">
-<script type="text/javascript" src="index_files\theme.js"></script>
+    <link rel="stylesheet" href="index_files\style_light.css">
+    <script type="text/javascript" src="index_files\theme.js"></script>
 </head>
 
 <body>
@@ -19,6 +19,7 @@
                 <a href="sub\interaktywny_js\interaktywny_js.html">JS</a>
                 <a href="sub\grawitacja\gravity.html">Grawitacja</a>
                 <a href="sub\zmywanie\zmywanie.html">Zmywanie</a>
+                <a href="Test_WebGL\giera.html">Giera</a>
             </div>
         </nav>
     </header>
