--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Main Page</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="index_files\style_light.css" />
+    <link rel="stylesheet" href="index_files\light.css" />
+    <link rel="stylesheet" href="index_files\style.css" />
     <script type="text/javascript" src="index_files\theme.js"></script>
   </head>
 
