--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="color_changer" onclick="Theme()"></div>
-    <header id="sticky" class="theme">
+    <header id="sticky">
       <nav style="height:40px; ">
         <a id="f_left" href="index.html">Kafelixon</a>
         <div id="f_right">
@@ -22,7 +22,7 @@
         </div>
       </nav>
     </header>
-    <article id="main_container" class="theme">
+    <article id="main_container">
       <header>
         <h1>Sample Header</h1>
       </header>
