--- a/sub/kolko i krzyzyk/kolko_i_krzyzyk.html
+++ b/sub/kolko i krzyzyk/kolko_i_krzyzyk.html
@@ -4,7 +4,7 @@
 <head>
     <title>Kolko i Krzyzyk</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../../index_files\style_light.css">
+    <link rel="stylesheet" href="../../index_files\style.css">
     <script type="text/javascript" src="../../index_files\theme.js"></script>
 </head>
 
