--- a/sub/kolko i krzyzyk/kolko_i_krzyzyk.html
+++ b/sub/kolko i krzyzyk/kolko_i_krzyzyk.html
@@ -21,6 +21,8 @@
         <div class=kafle id="restart" onclick="restart()">RESET
         </div>
         <script>
+            var general_color = "#fff";
+            var win_color = "red";
             // tworzenie pol do gry
             for (var i = 1; i < 10; i++) {
                 var div = document.createElement("div");
