--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="color_changer" onclick="Theme()"></div>
-    <header id="sticky" class="theme">
+    <header id="sticky">
       <nav style="height:40px; ">
         <a id="f_left" href="index.html">Kafelixon</a>
         <div id="f_right">
@@ -18,11 +18,11 @@
           <a href="sub\interaktywny_js\interaktywny_js.html">JS</a>
           <a href="sub\grawitacja\gravity.html">Grawitacja</a>
           <a href="sub\zmywanie\zmywanie.html">Zmywanie</a>
-          <a href="Test_WebGL\giera.html">Giera</a>
+          <a href="sub\szachy\szachy.html">szachy</a>
         </div>
       </nav>
     </header>
-    <article id="main_container" class="theme">
+    <article id="main_container">
       <header>
         <h1>Sample Header</h1>
       </header>
