--- a/sub/szachy/szachy.html
+++ b/sub/szachy/szachy.html
@@ -21,6 +21,7 @@
     <div id=chess>
     </div>
     <div id="restart"></div>
+    <button onclick="freeMoves = !freeMoves">free moves</button>
     <script type="text/javascript" src="./szachy.js"></script>
 </body>
 
