--- a/index.html
+++ b/index.html
@@ -76,15 +76,17 @@
 <body>
 
 <div class="navbar">
-  <a href="">Kafelixon</a>
+  <a href="index.html">Kafelixon</a>
   <div class="dropdown">
   <button class="dropbtn" onclick="myFunction()">Dropdown
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-content" id="myDropdown">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="sub\kolko i krzyzyk\kolko_i_krzyzyk.html">XO</a>
+    <a href="sub\interaktywny_js\interaktywny_js.html">JS</a>
+    <a href="sub\grawitacja\gravity.html">Grawitacja</a>
+    <a href="sub\zmywanie\zmywanie.html">Zmywanie</a>
+    <a href="sub\szachy\szachy.html">szachy</a>
   </div>
   </div> 
 </div>
@@ -101,19 +103,7 @@ window.onclick = function(e) {
   }
 }
 </script>
-    <div id="color_changer" onclick="Theme()"></div>
-    <header id="sticky">
-      <nav style="height:40px; ">
-        <a id="f_left" href="index.html">Kafelixon</a>
-        <div id="f_right">
-          <a href="sub\kolko i krzyzyk\kolko_i_krzyzyk.html">XO</a>
-          <a href="sub\interaktywny_js\interaktywny_js.html">JS</a>
-          <a href="sub\grawitacja\gravity.html">Grawitacja</a>
-          <a href="sub\zmywanie\zmywanie.html">Zmywanie</a>
-          <a href="sub\szachy\szachy.html">szachy</a>
-        </div>
-      </nav>
-    </header>
+  <div id="color_changer" onclick="Theme()"></div>
     <article id="main_container">
       <header>
         <h1>Sample Header</h1>
