--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 .navbar {
   overflow: hidden;
   background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar a {
@@ -43,7 +42,7 @@
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-  background-color: red;
+  background-color: #ddd;
 }
 
 .dropdown-content {
