--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-content" id="myDropdown">
-    <a href="sub\kolko i krzyzyk\kolko_i_krzyzyk.html">XO</a>
+    <a href="sub\ttt\kolko_i_krzyzyk.html">XO</a>
     <a href="sub\interaktywny_js\interaktywny_js.html">JS</a>
     <a href="sub\grawitacja\gravity.html">Grawitacja</a>
     <a href="sub\zmywanie\zmywanie.html">Zmywanie</a>
