--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<div class="navbar">
+<div id="sticky">
   <a href="index.html">Kafelixon</a>
   <div class="dropdown">
   <button class="dropbtn" onclick="myFunction()">Dropdown
@@ -29,6 +29,7 @@
   </div>
   </div> 
 </div>
+
 <script>
 function myFunction() {
   document.getElementById("myDropdown").classList.toggle("show");
