--- a/sub/ttt/kolko_i_krzyzyk.html
+++ b/sub/ttt/kolko_i_krzyzyk.html
@@ -2,14 +2,47 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="../../index_files\light.css" />
     <link rel="stylesheet" href="../../index_files\style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script type="text/javascript" src="../../index_files\theme.js"></script>
   </head>
 
   <body>
-    <nav id="sticky" class="theme">
-      <a id="f_left" href="../../index.html">Kafelixon</a>
-    </nav>
+    <div id="sticky">
+      <a href="../../index.html">Kafelixon</a>
+      <div class="dropdown">
+        <button class="dropbtn" onclick="myFunction()">
+          Dropdown
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content" id="myDropdown">
+          <a href="../ttt\kolko_i_krzyzyk.html">XO</a>
+          <a href="../interaktywny_js\interaktywny_js.html">JS</a>
+          <a href="../grawitacja\gravity.html">Grawitacja</a>
+          <a href="../zmywanie\zmywanie.html">Zmywanie</a>
+          <a href="../szachy\szachy.html">szachy</a>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      function myFunction() {
+        document.getElementById("myDropdown").classList.toggle("show");
+      }
+      window.onclick = function (e) {
+        if (!e.target.matches(".dropbtn")) {
+          var myDropdown = document.getElementById("myDropdown");
+          if (myDropdown.classList.contains("show")) {
+            myDropdown.classList.remove("show");
+          }
+        }
+      };
+    </script>
+
     <div class="container"></div>
     <script src="tictactoe.js"></script>
   </body>
