--- a/sub/interaktywny_js/interaktywny_js.html
+++ b/sub/interaktywny_js/interaktywny_js.html
@@ -2,18 +2,18 @@
 <html lang="pl" dir="ltr">
   <head>
     <style media="screen">
-      canvas{
+      canvas {
         border: 1px solid black;
       }
-      body{
-        margin:0;
+      body {
+        margin: 0;
       }
     </style>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Canvas Resize</title>
   </head>
   <body>
     <canvas></canvas>
-<script src="interaktywny_js.js" charset="utf-8"></script>
+    <script src="interaktywny_js.js" charset="utf-8"></script>
   </body>
 </html>
