--- a/sub/zmywanie/zmywanie.html
+++ b/sub/zmywanie/zmywanie.html
@@ -2,17 +2,20 @@
 <html lang="pl" dir="ltr">
   <head>
     <style media="screen">
-      body{
+      body {
         position: absolute;
-        margin:0;
+        margin: 0;
         padding: 0;
       }
     </style>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Canvas Resize</title>
   </head>
   <body>
-    <img src="paprotka.jpg" style="z-index:-1;position:absolute;width: 312px;height: 416px;">
+    <img
+      src="paprotka.jpg"
+      style="z-index: -1; position: absolute; width: 312px; height: 416px"
+    />
     <canvas></canvas>
     <script src="zmywanie.js" charset="utf-8"></script>
   </body>
