--- a/sub/grawitacja/gravity.html
+++ b/sub/grawitacja/gravity.html
@@ -2,15 +2,15 @@
 <html lang="pl" dir="ltr">
   <head>
     <style media="screen">
-      canvas{
+      canvas {
         border: 1px solid black;
       }
-      body{
-        margin:0;
+      body {
+        margin: 0;
         height: 100%;
       }
     </style>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Canvas Resize</title>
   </head>
   <body>
