--- a/sub/ttt/kolko_i_krzyzyk.html
+++ b/sub/ttt/kolko_i_krzyzyk.html
@@ -31,13 +31,13 @@
 
     <script>
       function myFunction() {
-        document.getElementById("myDropdown").classList.toggle("show");
+        document.getElementById('myDropdown').classList.toggle('show');
       }
       window.onclick = function (e) {
-        if (!e.target.matches(".dropbtn")) {
-          var myDropdown = document.getElementById("myDropdown");
-          if (myDropdown.classList.contains("show")) {
-            myDropdown.classList.remove("show");
+        if (!e.target.matches('.dropbtn')) {
+          var myDropdown = document.getElementById('myDropdown');
+          if (myDropdown.classList.contains('show')) {
+            myDropdown.classList.remove('show');
           }
         }
       };
